--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>  
  
 <br/>  
-<h1>2. iOS安装 <a href="itms-services://?action=download-manifest&url='https://raw.githubusercontent.com/appleaoxin/appleaoxin.github.io/master/baobo_1.1.2.plist'">游戏包</a></h1>  
+<h1>2. iOS安装 <a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/appleaoxin/appleaoxin.github.io/master/baobo_1.1.2.plist">游戏包</a></h1>  
 <br/>  
 
 </body>  
